# rect_component

./: Cargo.toml  README.md
src/: lib.rs  rect.rs  rect_manager.rs
tests/: test.rs
